Stamps Collection 26.9.2
* HTML template updates
* Desktop application updates:
  - collection view filters
  - collection view with images
  - image upload with automatic resize
* Backend API: upload image by id
